[gd_scene load_steps=2 format=3 uid="uid://coaa4micjdhh4"]

[ext_resource type="Script" path="res://Scripts/time_attack.gd" id="1_egrnq"]

[node name="TimeAttack" type="CanvasLayer"]
script = ExtResource("1_egrnq")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.5
offset_top = -222.5
offset_right = 370.5
offset_bottom = 222.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="return" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Level1" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "1-1"

[node name="Level2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "1-2"

[node name="Level3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "1-3"

[node name="Level4" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "1-4"

[node name="Level5" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "1-5"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="1-1" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_horizontal = 4
text = "0:00:0"

[node name="1-2" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "0:00:0"

[node name="1-3" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "0:00:0"

[node name="1-4" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "0:00:0"

[node name="1-5" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
text = "0:00:0"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Level5" to="." method="_on_level_5_pressed"]
